--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.ning.arecibo</groupId>
   <artifactId>arecibo-metrics</artifactId>
   <name>arecibo-metrics</name>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>Arecibo integration with the metrics library</description>
   <url>http://www.ning.com</url>
@@ -50,7 +50,7 @@
     <dependency>
       <groupId>com.yammer.metrics</groupId>
       <artifactId>metrics-core</artifactId>
-      <version>2.0.0-BETA18</version>
+      <version>2.1.1</version>
     </dependency>
     <dependency>
       <groupId>com.google.inject</groupId>
