--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.ning.arecibo</groupId>
   <artifactId>arecibo-metrics</artifactId>
   <name>arecibo-metrics</name>
-  <version>2.0.0</version>
+  <version>2.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>Arecibo integration with the metrics library</description>
   <url>http://www.ning.com</url>
